fix: change vue dark theme accent color to match contrast

--- a/src/themes.css
+++ b/src/themes.css
@@ -432,7 +432,7 @@
     --primary-foreground: 171 82% 3%;
     --secondary: 171 30% 25%;
     --secondary-foreground: 171 30% 85%;
-    --accent: 192 100% 25%;
+    --accent: 192 90% 18%;
     --accent-foreground: 0 0% 100%;
     --destructive: 2 95% 56%;
     --destructive-foreground: 0 0% 100%;
